updated libraries, cleanup, pre-load sample data to lower latency and prevent buffer underruns